--- a/package.json
+++ b/package.json
@@ -5,15 +5,18 @@
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
-    "prepublish": "npx tsc"
+    "prepublish": "npx tsc",
+    "test": "mocha"
   },
   "repository": "git@github.com:SlicR97/simple-rules.git",
   "author": "Nico Loos",
   "license": "MIT",
   "private": false,
   "devDependencies": {
+    "@types/mocha": "^9.1.1",
     "@types/node": "^17.0.30",
-    "jest": "^28.0.3",
+    "mocha": "^9.2.2",
+    "ts-node": "^10.7.0",
     "typescript": "^4.6.4"
   }
 }
