--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "types": "dist/index.d.ts",
   "scripts": {
     "prepublish": "npx tsc",
-    "test": "mocha"
+    "test": "mocha",
+    "lint": "eslint . --ext .ts",
+    "prettier-format": "prettier --config .prettierrc 'src/**/*.ts' --write"
   },
   "repository": "git@github.com:SlicR97/simple-rules.git",
   "author": "Nico Loos",
@@ -15,7 +17,11 @@
   "devDependencies": {
     "@types/mocha": "^9.1.1",
     "@types/node": "^17.0.30",
+    "@typescript-eslint/eslint-plugin": "^5.25.0",
+    "@typescript-eslint/parser": "^5.25.0",
+    "eslint": "^8.15.0",
     "mocha": "^9.2.2",
+    "prettier": "^2.6.2",
     "ts-node": "^10.7.0",
     "typescript": "^4.6.4"
   }
