--- a/package.json
+++ b/package.json
@@ -6,24 +6,56 @@
   "types": "dist/index.d.ts",
   "scripts": {
     "prepublish": "rm -rf dist && npx tsc",
-    "test": "nyc mocha",
+    "build": "rm -rf dist && npx tsc",
+    "test": "mocha",
+    "cover": "nyc mocha",
     "lint": "eslint . --ext .ts",
-    "prettier-format": "prettier --config .prettierrc 'src/**/*.ts' --write"
+    "prettier-format": "prettier --config .prettierrc '{src,test}/**/*.ts' --write",
+    "prepare": "husky install",
+    "pre-commit": "lint-staged"
   },
   "repository": "git@github.com:SlicR97/simple-rules.git",
   "author": "Nico Loos",
   "license": "MIT",
   "private": false,
   "devDependencies": {
-    "@types/mocha": "^9.1.1",
+    "@istanbuljs/nyc-config-typescript": "^1.0.2",
+    "@types/chai": "^4.3.5",
+    "@types/mocha": "^10.0.1",
     "@types/node": "^17.0.30",
-    "@typescript-eslint/eslint-plugin": "^5.25.0",
-    "@typescript-eslint/parser": "^5.25.0",
-    "eslint": "^8.15.0",
-    "mocha": "^9.2.2",
+    "@typescript-eslint/eslint-plugin": "^5.59.7",
+    "@typescript-eslint/parser": "^5.59.7",
+    "chai": "^4.3.7",
+    "eslint": "^8.41.0",
+    "husky": "^8.0.0",
+    "lint-staged": "^13.2.2",
+    "mocha": "^10.2.0",
     "nyc": "^15.1.0",
-    "prettier": "^2.6.2",
-    "ts-node": "^10.7.0",
-    "typescript": "^4.6.4"
+    "prettier": "^2.8.8",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.0.4"
+  },
+  "lint-staged": {
+    "**/*.ts": [
+      "yarn lint",
+      "yarn prettier-format"
+    ]
+  },
+  "nyc": {
+    "extends": "@istanbuljs/nyc-config-typescript",
+    "check-coverage": true,
+    "all": true,
+    "include": [
+      "src/**/!(*.test.*).ts"
+    ],
+    "reporter": [
+      "html",
+      "text"
+    ],
+    "report-dir": "coverage",
+    "branches": 95,
+    "lines": 95,
+    "functions": 95,
+    "statements": 95
   }
 }
